# advent-of-code

./: .gitignore  Cargo.toml  Dockerfile  benchmarks.txt  justfile  tarpaulin.toml
.github/workflows/: ci.yml  page.yml
crates/common/: Cargo.toml
years/2023/: README.md  justfile
years/2023/daily-template/: README.md
years/2023/day01/: README.md
years/2023/day02/: Cargo.toml  README.md
years/2023/day03/: Cargo.toml
years/2023/day04/: README.md
years/2023/day05/: Cargo.toml
years/2024/: Cargo.toml  README.md  justfile
years/2024/daily-template/: Cargo.toml
years/2024/daily-template/src/: part1.rs
years/2024/day-01/: Cargo.toml
years/2024/day-01/src/: part1.rs  part2.rs
years/2024/day-02/: Cargo.toml
years/2024/day-02/src/: part1.rs  part2.rs
years/2024/day-03/: Cargo.toml
years/2024/day-03/src/: part1.rs
years/2024/day-04/: Cargo.toml
years/2024/day-04/src/: part1.rs
years/2024/day-05/: Cargo.toml
years/2024/day-05/src/: part1.rs
years/2025/: README.md
years/2025/daily-template/: Cargo.toml
years/2025/daily-template/benches/: benchemarks.rs
years/2025/day-01/: Cargo.toml
years/2025/day-01/src/: part1.rs  part2.rs
years/2025/day-02/: Cargo.toml
years/2025/day-02/src/: part1.rs  part2.rs
years/2025/day-03/: Cargo.toml
years/2025/day-03/src/: part1.rs  part2.rs
years/2025/day-04/: Cargo.toml
years/2025/day-04/src/: part1.rs  part2.rs
years/2025/day-05/: Cargo.toml
years/2025/day-05/src/: part1.rs  part2.rs
years/2025/day-06/: Cargo.toml
years/2025/day-06/src/: part1.rs  part2.rs
years/2025/day-07/: Cargo.toml
years/2025/day-07/src/: part1.rs  part2.rs
years/2025/day-08/: Cargo.toml
years/2025/day-08/benches/: benchmarks.rs
years/2025/day-08/src/: part1.rs  part2.rs
years/2025/day-09/: Cargo.toml
years/2025/day-09/benches/: benchmarks.rs
years/2025/day-09/src/: part1.rs  part2.rs
years/2025/day-10/: Cargo.toml  input1.txt
years/2025/day-10/benches/: benchmarks.rs
years/2025/day-10/src/: part1.rs  part2.rs
years/2025/day-11/: Cargo.toml
years/2025/day-11/benches/: benchmarks.rs
years/2025/day-11/src/: part1.rs  part2.rs
years/2025/day-12/: Cargo.toml
years/2025/day-12/benches/: benchmarks.rs
years/2025/day-12/src/: part1.rs  part2.rs
