[workspace]
resolver = "3"

members = [
    "crates/*",
    # "years/2025/*"
]

[workspace.package]
edition = "2024"
version = "0.1.0"
publish = false

[workspace.dependencies]
thiserror = "2.0.17"
itertools = "0.14"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
unwrap_used = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
