[workspace]
resolver = "3"

members = ["crates/*", "years/2025/day-*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
publish = false

[workspace.dependencies]
thiserror = "2.0.17"
itertools = "0.14"
rstest = "0.26"
tracing = "0.1.43"

[workspace.dependencies.miette]
version = "7.6"
features = ["fancy"]

[workspace.dependencies.test-log]
version = "0.2.19"
features = ["trace"]
default-features = false

[workspace.dependencies.tracing-subscriber]
version = "0.3.22"
features = ["fmt", "env-filter"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
unwrap_used = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
