[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]

[workspace.dependencies]
itertools = "=0.13.0"
nom = "=7.1.3"
nom_locate = "=4.2.0"
nom-supreme = "=0.8.0"
miette = { version = "=7.4.0", features = ["fancy"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["fmt", "env-filter"] }
rstest = "=0.23.0"
rstest_reuse = "=0.7.0"
test-log = { version = "=0.2.16", default-features = false, features = [
    "trace",
] }
thiserror = "=2.0.3"
