[package]
name = "day-01"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day-01-part1"
path = "src/bin/part1.rs"

[[bin]]
name = "day-01-part2"
path = "src/bin/part2.rs"

[dependencies]
itertools.workspace = true
miette.workspace = true

[dev-dependencies]
rstest.workspace = true
